--- a/src/styles.css
+++ b/src/styles.css
@@ -88,12 +88,20 @@
         @apply antialiased;
     }
 
-    [role="link"] {
-        text-underline-position: from-font;
+    .ui-grid-container .ui-empty-grid-item {
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='8' height='8' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 0h1L0 6V5zm1 5v1H5z' fill='%239C92AC' fill-opacity='.3' fill-rule='evenodd'/%3E%3C/svg%3E");
+        /* opacity: 0.7; */
+        @apply border-r border-b border-dotted;
     }
 
-    input[type="search"]::-webkit-search-cancel-button {
-        margin-left: 4px;
+    /* Remove right border from last column */
+    .ui-grid-container .ui-empty-grid-item:nth-child(4n) {
+        @apply border-r-0;
+    }
+
+    /* Remove bottom border from last row */
+    .ui-grid-container .ui-empty-grid-item:nth-last-child(-n + 4) {
+        @apply border-b-0;
     }
 }
 
