Initial sample of drag & drop

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "./styles";
+@plugin "tailwindcss-debug-screens";
 
 /* @plugin "tailwindcss-debug-screens" {
     prefix: "";
