Migrate to react-grid-layout (#2)

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,6 @@
 @layer base {
-    *,
-    ::after,
-    ::before,
-    ::backdrop,
-    ::file-selector-button {
-        border-color: var(--color-gray-light, currentColor);
+    .radix-themes {
+        font-family: var(--font-sans) !important;
     }
 
     :root {
