--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,6 @@
 @layer base {
-    *,
-    ::after,
-    ::before,
-    ::backdrop,
-    ::file-selector-button {
-        border-color: var(--color-gray-light, currentColor);
+    .radix-themes {
+        font-family: var(--font-sans) !important;
     }
 
     :root {
@@ -112,6 +108,3 @@
         @apply outline-green outline outline-dashed;
     }
 }
-
-/* React Grid Layout styles */
-@import "./grid-layout.css";
