Update styling for readability
Font styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,12 @@
 
     html {
         /* Never change this default! */
-        @apply text-base text-black;
+        @apply text-base tracking-tight text-black;
+    }
+
+    p,
+    body {
+        @apply text-base;
     }
 
     a {
@@ -26,85 +31,33 @@
     h1 {
         @apply text-2xl; /* 24px */
         @apply font-bold;
-        @apply leading-p-130 tracking-tightest;
+        @apply leading-p-130;
     }
 
     h2 {
         @apply text-xl; /* 21px */
         @apply font-bold;
-        @apply leading-p-130 tracking-tightest;
+        @apply leading-p-130;
     }
 
     h3 {
         @apply text-lg; /* 18px */
         @apply font-bold;
-        @apply tracking-tightest;
+        @apply tracking-normal;
     }
 
     h4 {
         @apply text-md; /* 16 px */
-        @apply leading-p-120 tracking-tightest;
+        @apply leading-p-120 tracking-tight;
     }
 
     h5 {
         @apply text-base; /* 14 px */
-        @apply leading-p-120 tracking-tightest;
+        @apply leading-p-120 tracking-tight;
     }
 
     h6 {
         @apply text-sm; /* 14 px */
-        @apply leading-p-110 tracking-tightest;
-    }
-
-    .p1 {
-        @apply text-md; /* 16px */
-        @apply leading-p-130 tracking-tightest;
-    }
-
-    .p2 {
-        @apply text-base; /* 14px */
-        @apply leading-p-120 tracking-tightest;
-    }
-
-    .p3 {
-        @apply text-sm; /* 12px */
-        @apply leading-p-110 tracking-tightest;
-    }
-
-    .ui-badge .icon {
-        position: relative;
-        top: -1px;
-    }
-
-    sup {
-        top: -5px;
-    }
-
-    .font-bold {
-        @apply antialiased;
-    }
-}
-
-@layer utilities {
-    var {
-        /* By default browsers style <var> as italic */
-        @apply not-italic;
-    }
-
-    .bg-debug,
-    .bg-debug-red {
-        @apply bg-extra-light-red;
-    }
-    .bg-debug-green {
-        @apply bg-extra-light-green;
-    }
-
-    .border-debug,
-    .border-debug-red {
-        @apply outline-red outline outline-dashed;
-    }
-
-    .border-debug-green {
-        @apply outline-green outline outline-dashed;
+        @apply leading-p-110 tracking-tight;
     }
 }
