--- a/src/theme.css
+++ b/src/theme.css
@@ -1,12 +1,9 @@
 @import "tailwindcss";
 @import "@radix-ui/themes/styles.css";
 @import "./styles.css";
+@import "./fonts.css";
 @import "./grid-layout.css";
 @plugin "tailwindcss-debug-screens";
-
-/* @plugin "tailwindcss-debug-screens" {
-    prefix: "";
-} */
 
 /* Force Tailwind to include line-clamp-* utilities which maybe used by ClampedText */
 @source inline("line-clamp-{1..5}");
@@ -188,8 +185,8 @@
     --radius-2xl: 16px;
     --radius-full: 9999px;
 
-    --font-sans: Inter, ui-sans-serif, system-ui, sans-serif;
-    --font-mono: Roboto Mono, ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
+    --font-sans: Söhne, Inter, ui-sans-serif, system-ui, Segoe UI, Roboto, sans-serif;
+    --font-mono: "Söhne Mono", Roboto Mono, ui-monospace, SFMono-Regular, Menlo, Consolas, "Ubuntu Mono", monospace;
 
     --leading-0: var(--spacing-0);
     --leading-0_25: var(--spacing-0_25);
