--- a/src/theme.css
+++ b/src/theme.css
@@ -1,7 +1,7 @@
+@import "./fonts.css";
 @import "tailwindcss";
 @import "@radix-ui/themes/styles.css";
 @import "./styles.css";
-@import "./fonts.css";
 @import "./grid-layout.css";
 @plugin "tailwindcss-debug-screens";
 
@@ -185,8 +185,8 @@
     --radius-2xl: 16px;
     --radius-full: 9999px;
 
-    --font-sans: Söhne, Inter, ui-sans-serif, system-ui, Segoe UI, Roboto, sans-serif;
-    --font-mono: "Söhne Mono", Roboto Mono, ui-monospace, SFMono-Regular, Menlo, Consolas, "Ubuntu Mono", monospace;
+    --font-sans: Sohne, Inter, ui-sans-serif, system-ui, Segoe UI, Roboto, sans-serif;
+    --font-mono: "Sohne Mono", Roboto Mono, ui-monospace, SFMono-Regular, Menlo, Consolas, "Ubuntu Mono", monospace;
 
     --leading-0: var(--spacing-0);
     --leading-0_25: var(--spacing-0_25);
